opam-version: "2.0"
version: "0.1"
maintainer: "yminsky@gmail.com"
authors: ["Yaron Minsky"]
homepage: "https://github.com/yminsky/incr_dom_vg"
bug-reports: "https://github.com/yminsky/incr_dom_vg/issues"
dev-repo: "git+https://github.com/yminsky/incr_dom_vg.git"

build: [
  ["jbuilder" "subst"] {pinned}
  ["jbuilder" "build" "-p" name "-j" jobs]
]

depends: [
  "jbuilder" "base" "incr_dom" "vg"
]
